--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 
 .leftside {
     background: #ebebeb;
+    color:#777;
     padding: 0 20px 20px 20px;
     float: left;
     width: 49%;
@@ -40,6 +41,7 @@
 
     .leftsidearticle {
         background: #777;
+        color: #ebebeb;
         padding: 4px 0 0 0;
         width: 100%;
         height: 100%;
@@ -52,6 +54,8 @@
             padding: 4px 0 0 0;
             margin: 0 auto;
             background: #ebebeb;
+            color:#777;
+            font-weight: bold;
             
         }
 
@@ -61,6 +65,7 @@
             margin: 20px auto;
             padding: 4px 0 0 0;
             background: #ebebeb;
+            color:#777;
         }
 
 .rightside {
@@ -69,6 +74,7 @@
     width: 49%;
     height: 307px;
     box-sizing: border-box;
+    color:#777;
 }
 
 footer {
